# live2d-android

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/arkueid/live2d/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  lapp_model.cpp  live2d.cpp
app/src/main/cpp/Framework/src/Motion/: ACubismMotion.hpp
app/src/main/cpp/Main/: CMakeLists.txt
app/src/main/cpp/Main/src/: CMakeLists.txt  HackProperties.h  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  Log.hpp
app/src/main/java/com/arkueid/live2d/: Live2D_v3.java  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/arkueid/live2d/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
